refactor: Reorganize project structure and add build scripts

--- a/.gitignore
+++ b/.gitignore
@@ -21,24 +21,10 @@ Zone.Identifier
 *.bak
 __pycache__/
 
-*.synctex.gz
-*.fdb_latexmk
-*.synctex
-*.synctex(busy)
-*.synctex.gz(busy)
-*.pdfsync
-*.rubbercache
-rubber.cache
-*.aux
-*.log
-*.fls
-*.toc
-*.out
-*.bbl
-*.blg
-*.dvi
-*.ps
-.pdf
 *.mod
-
 *.o
+*.so
+*.a
+
+/build/
+/include/
